added sass script and created scss folder with file

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -1,178 +1,157 @@
-/*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-*/
-
-* {
+/* line 8, sass/main.scss */
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
+  box-sizing: inherit; }
 
+/* line 16, sass/main.scss */
+html {
+  font-size: 62.5%; }
+
+/* line 20, sass/main.scss */
 body {
-  padding: 30px;
+  padding: 3rem;
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 1.7;
   color: #777;
-}
+  box-sizing: border-box; }
 
+/* line 30, sass/main.scss */
 .header {
   height: 95vh;
-  background-image: linear-gradient(
-    to right bottom,
-    hsla(111, 55%, 64%, 0.80), rgba(40, 180, 133, 0.80)
-  ),
-    url(../img/hero.jpg);
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
-  position: relative;
-}
+  position: relative; }
 
-.logo-box {
-position: absolute;
-top: 40px;
-left: 40px;
-}
+/* line 44, sass/main.scss */
+.header__logo-box {
+  position: absolute;
+  top: 4rem;
+  left: 4rem; }
 
-.logo {
-  height: 35px;
-}
+/* line 50, sass/main.scss */
+.header__logo {
+  height: 3.5rem; }
 
-.text-box {
+/* line 54, sass/main.scss */
+.header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center;
-}
+  text-align: center; }
 
+/* line 62, sass/main.scss */
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
-  margin-bottom: 60px;
-}
+  margin-bottom: 6rem; }
 
-.heading-primary-main {
+/* line 69, sass/main.scss */
+.heading-primary--main {
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
   animation-name: moveInLeft;
   animation-duration: 1s;
-  animation-timing-function: ease-out;
-}
+  animation-timing-function: ease-out; }
 
-.heading-primary-sub {
+/* line 79, sass/main.scss */
+.heading-primary--sub {
   color: #fff;
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.74rem;
   animation-name: moveInRight;
   animation-duration: 1s;
-  animation-timing-function: ease-out;
-}
+  animation-timing-function: ease-out; }
 
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
-  }
-
+    transform: translateX(-10rem); }
   80% {
-    transform: translateX(10px);
-  }
-
+    transform: translateX(1rem); }
   100% {
     opacity: 1;
-    transform: translate(0);
-  }
-}
+    transform: translate(0); } }
 
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
-  }
-
+    transform: translateX(10rem); }
   80% {
-    transform: translateX(-10px);
-  }
-
+    transform: translateX(-1rem); }
   100% {
     opacity: 1;
-    transform: translate(0);
-  }
-}
+    transform: translate(0); } }
 
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(50px);
-  }
-
+    transform: translateY(5rem); }
   100% {
     opacity: 1;
-    transform: translate(0);
-  }
-}
+    transform: translate(0); } }
 
-
+/* line 135, sass/main.scss */
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 15px 40px;
-  display: inline-block; 
-  border-radius: 100px;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 10rem;
   transition: all .2s;
-  position: relative;
-}
+  position: relative; }
 
+/* line 146, sass/main.scss */
 .btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0,0,0,.2);
-}
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
 
+/* line 151, sass/main.scss */
 .btn:active {
-  transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0,0,0,.2);
-}
+  transform: translateY(-0.1rem);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
-.btn-white {
+/* line 156, sass/main.scss */
+.btn--white {
   background-color: #fff;
-  color: #777;
-}
+  color: #777; }
 
+/* line 161, sass/main.scss */
 .btn::after {
   content: "";
   display: inline-block;
-  height: 100% ;
+  height: 100%;
   width: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
-  transition: all 1s ;
-}
+  transition: all 1s; }
 
+/* line 174, sass/main.scss */
 .btn-white::after {
-  background-color: #fff;
-}
+  background-color: #fff; }
 
+/* line 178, sass/main.scss */
 .btn:hover::after {
   transform: scaleX(1.1);
-  opacity: 0;
-}
+  opacity: 0; }
 
-.btn-animated {
-  animation: moveInBottom 1s ease-out;
-}
+/* line 183, sass/main.scss */
+.btn--animated {
+  animation: moveInBottom 1s ease-out .5s;
+  animation-fill-mode: backwards; }
