--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -1,75 +1,3 @@
-/* line 9, sass/main.scss */
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-/* line 17, sass/main.scss */
-html {
-  font-size: 62.5%; }
-
-/* line 21, sass/main.scss */
-body {
-  padding: 3rem;
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 1.7;
-  color: #777;
-  box-sizing: border-box; }
-
-/* line 31, sass/main.scss */
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
-  position: relative; }
-  /* line 43, sass/main.scss */
-  .header__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem; }
-  /* line 49, sass/main.scss */
-  .header__logo {
-    height: 3.5rem; }
-  /* line 53, sass/main.scss */
-  .header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
-
-/* line 62, sass/main.scss */
-.heading-primary {
-  color: #fff;
-  text-transform: uppercase;
-  backface-visibility: hidden;
-  margin-bottom: 6rem; }
-  /* line 67, sass/main.scss */
-  .heading-primary--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-    animation-timing-function: ease-out; }
-  /* line 76, sass/main.scss */
-  .heading-primary--sub {
-    color: #fff;
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.74rem;
-    animation-name: moveInRight;
-    animation-duration: 1s;
-    animation-timing-function: ease-out; }
-
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -98,7 +26,58 @@ body {
     opacity: 1;
     transform: translate(0); } }
 
-/* line 133, sass/main.scss */
+/* line 1, sass/base/_base.scss */
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+/* line 9, sass/base/_base.scss */
+html {
+  font-size: 62.5%; }
+
+/* line 13, sass/base/_base.scss */
+body {
+  box-sizing: border-box; }
+
+/* line 1, sass/base/_typography.scss */
+body {
+  padding: 3rem;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.7;
+  color: #777; }
+
+/* line 10, sass/base/_typography.scss */
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 6rem; }
+  /* line 15, sass/base/_typography.scss */
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out; }
+  /* line 24, sass/base/_typography.scss */
+  .heading-primary--sub {
+    color: #fff;
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.74rem;
+    animation-name: moveInRight;
+    animation-duration: 1s;
+    animation-timing-function: ease-out; }
+
+/* line 2, sass/components/_button.scss */
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -108,29 +87,29 @@ body {
   transition: all .2s;
   position: relative; }
 
-/* line 142, sass/main.scss */
+/* line 11, sass/components/_button.scss */
 .btn:hover {
   transform: translateY(-0.3rem);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
-  /* line 145, sass/main.scss */
+  /* line 14, sass/components/_button.scss */
   .btn:hover::after {
     transform: scaleX(1.1);
     opacity: 0; }
 
-/* line 150, sass/main.scss */
+/* line 19, sass/components/_button.scss */
 .btn:active {
   transform: translateY(-0.1rem);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
-/* line 154, sass/main.scss */
+/* line 23, sass/components/_button.scss */
 .btn--white {
   background-color: #fff;
   color: #777; }
-  /* line 157, sass/main.scss */
+  /* line 26, sass/components/_button.scss */
   .btn--white::after {
     background-color: #fff; }
 
-/* line 161, sass/main.scss */
+/* line 30, sass/components/_button.scss */
 .btn::after {
   content: "";
   display: inline-block;
@@ -143,7 +122,38 @@ body {
   z-index: -1;
   transition: all 1s; }
 
-/* line 173, sass/main.scss */
+/* line 42, sass/components/_button.scss */
 .btn--animated {
   animation: moveInBottom 1s ease-out .5s;
   animation-fill-mode: backwards; }
+
+/* line 1, sass/layout/_header.scss */
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
+  position: relative; }
+  /* line 13, sass/layout/_header.scss */
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  /* line 19, sass/layout/_header.scss */
+  .header__logo {
+    height: 3.5rem; }
+  /* line 23, sass/layout/_header.scss */
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
+
+/* line 1, sass/layout/_grid.scss */
+.row {
+  max-width: 114rem;
+  background-color: #fff;
+  margin: 0 auto;
+  margin-bottom: 8rem; }
