--- a/advanced_css/natours/starter/css/style.css
+++ b/advanced_css/natours/starter/css/style.css
@@ -77,6 +77,31 @@ body {
     animation-duration: 1s;
     animation-timing-function: ease-out; }
 
+/* line 36, sass/base/_typography.scss */
+h2.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .2s; }
+  /* line 48, sass/base/_typography.scss */
+  h2.heading-secondary:hover {
+    transform: skewY(2deg) skewX(5deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+/* line 1, sass/base/_utilities.scss */
+.u-center-text {
+  text-align: center; }
+
+/* line 5, sass/base/_utilities.scss */
+.u-margin-bottom-8 {
+  margin-bottom: 8rem; }
+
 /* line 2, sass/components/_button.scss */
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -154,6 +179,42 @@ body {
 /* line 1, sass/layout/_grid.scss */
 .row {
   max-width: 114rem;
-  background-color: #fff;
-  margin: 0 auto;
-  margin-bottom: 8rem; }
+  margin: 0 auto; }
+  /* line 5, sass/layout/_grid.scss */
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  /* line 2, sass/abstracts/_mixins.scss */
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  /* line 11, sass/layout/_grid.scss */
+  .row [class^="col-"] {
+    float: left; }
+    /* line 14, sass/layout/_grid.scss */
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  /* line 19, sass/layout/_grid.scss */
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  /* line 23, sass/layout/_grid.scss */
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem) / 3); }
+  /* line 27, sass/layout/_grid.scss */
+  .row .col-1-of-4 {
+    width: calc((100% - 3  * 6rem) / 4); }
+  /* line 31, sass/layout/_grid.scss */
+  .row .col-2-of-3 {
+    width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem); }
+  /* line 35, sass/layout/_grid.scss */
+  .row .col-2-of-4 {
+    width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
+  /* line 39, sass/layout/_grid.scss */
+  .row .col-3-of-4 {
+    width: calc(3 * ((100% - 3 * 6rem) / 4) + 2*6rem); }
+
+/* line 1, sass/pages/_home.scss */
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
